--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -40,6 +40,7 @@ jobs:
       # build and test the apps     
       - name: build
         run: |
+          npm run start
           npm run test
   push_to_Docker_Hub:
       # The type of runner that the job will run on
